# Minecraft_Server_Bounce

./: .gitignore  Cargo.toml  README.md  my_info.txt  run.sh
config/: config.json  server_bounce_config.json
server/: ServerBounce.deps.json  ServerBounce.dll.config  eula.txt  ops.json  server.properties  tell.txt.txt  usercache.json
server/world/: level.dat_old
server/world/advancements/: 0de74123-5f62-400a-baf0-958bab39bc2f.json  6da63f26-a3dd-41f6-ba17-efea61f6375e.json  df2b47f6-ff57-4263-ac02-422e18666813.json
server/world/data/: bclib.nbt  betterend.nbt  fabricRegistry.dat.1
server/world/entities/: r.-1.-1.mca  r.-1.-3.mca  r.-1.-4.mca  r.-1.-5.mca  r.-1.0.mca  r.-1.1.mca  r.-1.2.mca  r.-1.3.mca  r.-1.4.mca  r.-1.5.mca  r.-10.-1.mca  r.-10.-2.mca  r.-10.-3.mca  r.-10.-4.mca  r.-11.-1.mca  r.-11.-2.mca  r.-11.-3.mca  r.-11.-4.mca  r.-11.0.mca  r.-11.1.mca  r.-11.2.mca  r.-11.3.mca  r.-12.-1.mca  r.-12.-2.mca  r.-12.-3.mca  r.-12.-4.mca  r.-12.0.mca  r.-12.1.mca  r.-12.2.mca  r.-12.3.mca  r.-13.-1.mca  r.-13.-2.mca  r.-13.-3.mca  r.-13.-4.mca  r.-13.0.mca  r.-13.1.mca  r.-13.2.mca  r.-14.-1.mca  r.-14.-2.mca  r.-14.-3.mca  (+71 more)
server/world/playerdata/: 0de74123-5f62-400a-baf0-958bab39bc2f.dat_old  6da63f26-a3dd-41f6-ba17-efea61f6375e.dat_old  df2b47f6-ff57-4263-ac02-422e18666813.dat_old
server/world/poi/: r.-1.-1.mca  r.-1.1.mca  r.-1.2.mca  r.-1.3.mca  r.-1.4.mca  r.-10.-1.mca  r.-10.-2.mca  r.-10.-3.mca  r.-10.-4.mca  r.-11.-1.mca  r.-11.-2.mca  r.-11.-3.mca  r.-11.0.mca  r.-11.1.mca  r.-11.2.mca  (+47 more)
src/: backup.rs  config.rs  input.rs  main.rs  process.rs
(+83 files in other folders)
