[package]
name = "minecraft_server_bounce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rusty_time = "0.12.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
